  - Update HTTP protocol to extend ReadCommand instead of
	  implementing EventListener (Marcus Redeker, ORCJAVA-465)
  - More lenient CORS headers (Christian Bauer, ORCJAVA-472)
  - Improve 1-wire implementation (Eric Bariaux, ORCJAVA-475)
  - Add log messages to Rules Engine (Isaac Martin, Michal Rutka, ORCJAVA-481)
  - Add X10 logging category (ORCJAVA-370)

Bug Fixes:

  - Update Vera implementation to use locale independent string case conversions (ORCJAVA-341)
  - Update X10 implementation to use locale independent string case conversions (ORCJAVA-342)
  - Update Russound implementation to use locale independent string case conversions (ORCJAVA-343)
  - Update DSCIT100 implementation to use locale independent string case conversions (ORCJAVA-344)
  - Fixed: Weird URL in example of security constraint in web.xml (ORCJAVA-322)
  - Fixed: False warning in X10 implementation (ORCJAVA-350)
  - Fixed: False warning in KNX implementation (ORCJAVA-351)
  - Fixed: False warning with in-memory virtual commands (ORCJAVA-352)
  - Fixed: False warning in ISY-99 protocol implementation (ORCJAVA-491)

Controller Pro 1.1.1
====================

Bug Fixes:

  - Fixed: RRD4J Protocol commands that change the start or end time of a graph also
	  cause the end or start time respectively to be fixed (Richard Turner, ORCJAVA-451)
  - Fixed: Drools exception when executing rules after controller xml has been reloaded (ORCJAVA-407)
  - Decode request path segments (Christian Bauer, ORCJAVA-471)
  - Update version of Restlet library used (fixed bug in Restlet thread management, ORCJAVA-476)
  - Add more logging information on connection failure
    when retrieving controller identity (ORCJAVA-459)
  - Fixed: Issue parsing empty strings in status values by Vera protocol (ORCJAVA-489)

Controller Pro 1.1.0
====================

New Features:

  - Manage User Credentials in Controller. (Juha Lindfors, ORCJAVA-422)